--- a/index.html
+++ b/index.html
@@ -127,11 +127,9 @@
 <!-- 背景模糊化插件 -->
 <script src="js/background-blur.min.js"></script>
 
-<!-- 站长统计代码 -->
-<span style="display: none">
-    <!-- 各类统计代码都放在这里…… -->
-    
-</span>
+<!-- 电脑版与主进程沟通模块 -  by 疯子音乐 -->
+<!-- 由于 nodeIntergration 和 jQuery 互不兼容，为了网站功能完整性，此模块已暂时禁用-->
+<!--<script src="js/desktop.js"></script>-->
 
 </body>
 </html>
