--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="欢迎来到疯子音乐！这里提供免费的在线音乐播放与下载~"/>
     
     <!-- favicon图标 -->
-    <link rel="shortcut icon" href="favicon.ico" sizes="32x32">
-    <link rel="bookmark" href="favicon.ico">
+    <link rel="shortcut icon" href="icon.ico" sizes="32x32">
+    <link rel="bookmark" href="icon.ico">
     <link rel="apple-touch-icon" sizes="144x144" href="apple.png">
     
     <!-- jQuery文件 -->
